Code looks changes

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -417,18 +417,14 @@
    "source": [
     "fig, axs = plt.subplots(1,2)\n",
     "\n",
-    "axs[0].plot(\n",
-    "    epsilons,\n",
-    "    label='Epsilon')\n",
-    "axs[0].plot(\n",
-    "    sum_rewards,\n",
-    "    label='Rewards')\n",
-    "axs[1].plot(\n",
-    "    epsilonsHigh,\n",
-    "    label='Epsilon')\n",
-    "axs[1].plot(\n",
-    "    sum_rewardsHigh,\n",
-    "    label='Rewards')\n",
+    "axs[0].plot(epsilons,\n",
+    "            label='Epsilon')\n",
+    "axs[0].plot(sum_rewards,\n",
+    "            label='Rewards')\n",
+    "axs[1].plot(epsilonsHigh,\n",
+    "            label='Epsilon')\n",
+    "axs[1].plot(sum_rewardsHigh,\n",
+    "            label='Rewards')\n",
     "\n",
     "plt.legend()"
    ]
@@ -615,9 +611,8 @@
     "        epsilon_decay_rate=0.0001\n",
     "    )\n",
     "\n",
-    "    plot(\n",
-    "        sum_rewards=sum_rewards,\n",
-    "        label=f'eps: {epsilon}')\n",
+    "    plot(sum_rewards=sum_rewards,\n",
+    "         label=f'eps: {epsilon}')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -922,9 +917,8 @@
     "        epsilon_decay_rate=epsilon_decay_rate\n",
     "    )\n",
     "\n",
-    "    plot(\n",
-    "        sum_rewards=sum_rewards,\n",
-    "        label=f'decay rate: {epsilon_decay_rate}')\n",
+    "    plot(sum_rewards=sum_rewards,\n",
+    "         label=f'decay rate: {epsilon_decay_rate}')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -963,10 +957,8 @@
     "    epsilon_decay_rate=0.0001\n",
     ")\n",
     "\n",
-    "save(\n",
-    "    sum_rewards=sum_rewards,\n",
-    "    q_tabel=q_tabel\n",
-    ")"
+    "save(sum_rewards=sum_rewards,\n",
+    "     q_tabel=q_tabel)"
    ]
   },
   {
@@ -1188,12 +1180,10 @@
     }
    ],
    "source": [
-    "plot(\n",
-    "    sum_rewards=sum_rewardsON,\n",
-    "    label='Slippery ON')\n",
-    "plot(\n",
-    "    sum_rewards=sum_rewardsOFF,\n",
-    "    label='Slippery OFF')\n",
+    "plot(sum_rewards=sum_rewardsON,\n",
+    "     label='Slippery ON')\n",
+    "plot(sum_rewards=sum_rewardsOFF,\n",
+    "     label='Slippery OFF')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -1495,13 +1485,11 @@
     "    temperature_decay_rate=0.0001\n",
     ")\n",
     "\n",
-    "save(\n",
-    "    q_tabel=q,\n",
-    "    sum_rewards=sum_rewards)\n",
+    "save(q_tabel=q,\n",
+    "     sum_rewards=sum_rewards)\n",
     "\n",
-    "plot(\n",
-    "    sum_rewards=sum_rewards,\n",
-    "    label='sum_rewards')\n",
+    "plot(sum_rewards=sum_rewards,\n",
+    "     label='sum_rewards')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
